--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
                 <a href="#">Social Media</a>
             </nav>
         </div>
-     <h1>Veganas NFT</h1>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus velit consequatur at eius ex ducimus necessitatibus temporibus itaque exercitationem culpa, maxime, veniam esse magnam, excepturi minima voluptatum corporis quaerat!</p>
+     <div class="div-home">
+       <div class="left-div">
+         <h1>Veganas NFT</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus velit consequatur at eius ex ducimus necessitatibus temporibus itaque exercitationem culpa, maxime, veniam esse magnam, excepturi minima voluptatum corporis quaerat!</p>
+       </div>
+       <div class="right-div">
+
+       </div>
+     </div>
     </section>
     <section class="collection">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At accusamus voluptatibus rem ullam labore, unde reiciendis nemo sed inventore aperiam? Aliquam tempora, beatae in voluptas atque aliquid dolorum assumenda obcaecati?</p>
