finished the collection section

--- a/index.html
+++ b/index.html
@@ -1,41 +1,78 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Veganas NFT</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="scrypt.js">
-  </head>
-  <body>
-    <section class="home">
-        <div class="container-nav">
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">Collection</a>
-                <a href="#">About Us</a>
-                <a href="#">Social Media</a>
-            </nav>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Veganas NFT</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="style.css">  
+</head>
+
+<body>
+  <!-----------------Home Section----------------->
+  <section class="home" id="home">
+    <div class="container-nav">
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#collection">Collection</a>
+        <a href="#about">About Us</a>
+        <a href="#social">Social Media</a>
+      </nav>
+    </div>
+    <div class="div-home">
+      <div class="left-div">
+        <h1>Veganas NFT</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus velit consequatur at eius ex
+          ducimus necessitatibus temporibus itaque exercitationem culpa, maxime, veniam esse magnam, excepturi minima
+          voluptatum corporis quaerat!</p>
+      </div>
+      <div class="right-div">
+        <img src="img/gato endimonhado.png" alt="gato endiabrado">
+      </div>
+    </div>
+  </section>
+  <!-----------------COLLECTION Section----------------->
+  <section class="collection" id="collection">
+    <h1>Our Collection</h1>
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="grid-collection">
+            <img src="img/festenfiurias.png" alt="">
+            <img src="img/finistes.png" alt="">
+            <img src="img/gatonalta.png" alt="">
+            <img src="img/gold.png" alt="">
+            <img src="img/goldi.png" alt="">
+            <img src="img/hero.png" alt="">
+            <img src="img/maloks b.png" alt="">
+            <img src="img/maloks.png" alt="">
+            <img src="img/ninja chiclete.png" alt="">
+            <img src="img/rosa.png" alt="">
+          </div>
         </div>
-     <div class="div-home">
-       <div class="left-div">
-         <h1>Veganas NFT</h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus velit consequatur at eius ex ducimus necessitatibus temporibus itaque exercitationem culpa, maxime, veniam esse magnam, excepturi minima voluptatum corporis quaerat!</p>
-       </div>
-       <div class="right-div">
+        <div class="swiper-slide">
+          <div class="grid-collection">
+            <img src="img/uni.png" alt="">
+            <img src="img/vaquejada.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </section>
+  <!-----------------ABOUT US SECTION ----------------->
+  <section class="about" id="about">
 
-       </div>
-     </div>
-    </section>
-    <section class="collection">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At accusamus voluptatibus rem ullam labore, unde reiciendis nemo sed inventore aperiam? Aliquam tempora, beatae in voluptas atque aliquid dolorum assumenda obcaecati?</p>
+  </section>
+  <!-----------------SOCIAL MEDIA SECTION ----------------->
+  <section class="social" id="social">
 
-    </section>
-    <section class="about us">
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="scrypt.js"></script>
+</body>
 
-    </section>
-    <section class="social">
-
-    </section>
-  </body>
 </html>
